--- a/papers/yul_evm_writeup/conclusion.tex
+++ b/papers/yul_evm_writeup/conclusion.tex
@@ -1,1 +1,1 @@
-\todo{Text that sums everything up!}
+Obsidian offers significant promise to make programming easier and safer on the Ethereum platform. Gas costs are comparable for simple transactions, and although memory allocation can be expensive, it is orders of magnitude cheaper than allocating fresh contracts, and both easier and safer than having programmers allocate memory manually. We look forward to working together in the future to make Obsidian practical for Ethereum developers.
